Make js files and rough out app with pseudo code

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
-      </div>
+        <ul id="choices" class="choices">
+          <li><button data-index="0"></button></li>
+          <li><button data-index="1"></button></li>
+          <li><button data-index="2"></button></li>
+          <li><button data-index="3"></button></li>
+        </div>
+      </ul>
 
       <div id="end-screen" class="hide">
         <h2>All done!</h2>
