--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <li><button data-index="2"></button></li>
           <li><button data-index="3"></button></li>
         </div>
-      </ul>
+        </ul>
+        <p id="answer-status"></p>
 
       <div id="end-screen" class="hide">
         <h2>All done!</h2>
