Finalise quiz functions, and implement highscore code
assets/js/logic.js
------------------
Move feedback timer to feedback function.
Show appropriate feedback for achievement.

highscores.html
---------------
Show feedback for user interactions.

assets/js/scores.js
-------------------
Show scores when page loads.
Clear scores when #clear button clicked.

assets/js/utils.js
------------------
Move feedback function to utils.js as it's required on both html pages.

assets/css/styles.css
---------------------
Make 'Highscores cleared' feedback message small and bold.

--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
-  <body>
+  <body class="scores">
     <div class="wrapper">
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
@@ -18,6 +18,9 @@
       <button id="clear">Clear Highscores</button>
     </div>
 
+    <div id="feedback" class="feedback hide"></div>
+    
+    <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/scores.js"></script>
   </body>
 </html>
